rtest/tests/jsr335/Semantics/LambdaTypeAnalysis/CastContext/ShouldFail/syntax01/Test.java
// .result=COMPILE_FAIL

public class Test {
	public static void main(String[] args) {
		int a = (int)() -> 12;
    }
}
